# CodeLens-Rostelekom

./: README.md  app.py  index.py  pyproject.toml  requirements.txt  sample_queries.txt  setup.py  start.py
codelens/: __init__.py  chroma_client.py  config.py  indexer.py  logger.py  models.py  ollama_client.py  ollama_manager.py  scorer.py  ts_parser.py
gymhero/gymhero/: ZephyrEngine.java  quasar_bridge.js
