[project]
name = "codelens"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "tqdm>=4.65.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
